Update quote padding

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     .wrapper {
       bottom: 0;
       color: #fff;
-      padding: 2rem;
+      padding: 2rem 2rem 2rem 3rem;
       position: fixed;
       right: 0;
       max-width: 600px;
