--- a/index.html
+++ b/index.html
@@ -134,18 +134,11 @@
   </section>
   <script>
 
-    document.addEventListener("DOMContentLoaded", function (event) {
+    document.addEventListener('DOMContentLoaded', function (event) {
 
       var currentArrayPosition = 0
 
-      function shuffleArray(array) {
-        for (var i = array.length - 1; i > 0; i--) {
-          var j = Math.floor(Math.random() * (i + 1));
-          var temp = array[i];
-          array[i] = array[j];
-          array[j] = temp;
         }
-      }
 
       function increment(incrementBy) {
 
@@ -178,8 +171,6 @@
         else if (e.which === 13 || e.which === 32 || e.which === 39) increment(1)
       })
 
-      shuffleArray(quotes)
-      increment()
 
     })
 
@@ -667,6 +658,13 @@
 
     ]
 
+    // shuffle
+    for (var i = quotes.length - 1; i > 0; i--) {
+      var j = Math.floor(Math.random() * (i + 1));
+      var temp = quotes[i];
+      quotes[i] = quotes[j];
+      quotes[j] = temp;
+    }
   </script>
 </body>
 
