--- a/index.html
+++ b/index.html
@@ -423,10 +423,6 @@
         "author": "Marcus Aurelius"
       },
       {
-        "quote": "When you wake up in the morning, tell yourself: the people I deal with today will be meddling, ungrateful, arrogant, dishonest, jealous and surly. They are like this because they can't tell good from evil. But I have seen the beauty of good, and the ugliness of evil, and have recognized that the wrongdoer has a nature related to my own - not of the same blood and birth, but the same mind, and possessing a share of the divine. And so none of them can hurt me. No one can implicate me in ugliness. Nor can I feel angry at my relative, or hate him. We were born to work together like feet, hands and eyes, like the two rows of teeth, upper and lower. To obstruct each other is unnatural. To feel anger at someone, to turn your back on him: these are unnatural.",
-        "author": "Marcus Aurelius"
-      },
-      {
         "quote": "Look well into thyself; there is a source of strength which will always spring up if thou wilt always look.",
         "author": "Marcus Aurelius"
       },
@@ -503,7 +499,7 @@
         "author": "Marcus Aurelius"
       },
       {
-        "quote": "Just that you do the right thing. The rest doesn't matter. Cold or warm. Tired or well-rested. Despised or honored. Dying...or busy with other assignments. Because dying, too, is one of our assignments in life. There as well: \"To do what needs doing.\" Look inward. Don't let the true nature of anything elude you. Before long, all existing things will be transformed, to rise like smoke (assuming all things become one), or be dispersed in fragments...to move from one unselfish act to another with God in mind. Only there, delight and stillness...when jarred, unavoidably, by circumstances, revert at once to yourself, and don't lose the rhythm more than you can help. You'll have a better grasp of the harmony if you keep going back to it.",
+        "quote": "Just that you do the right thing. The rest doesn't matter. Cold or warm. Tired or well-rested. Despised or honored. Dying...or busy with other assignments. Because dying, too, is one of our assignments in life.",
         "author": "Marcus Aurelius"
       },
       {
@@ -662,7 +658,7 @@
         "author": "Marcus Aurelius"
       },
       {
-        "quote": "Unhappy am I because this has happened to me.- Not so, but happy am I, though this has happened to me, because I continue free from pain, neither crushed by the present nor fearing the future.",
+        "quote": "Unhappy am I because this has happened to me. Not so, but happy am I, though this has happened to me, because I continue free from pain, neither crushed by the present nor fearing the future.",
         "author": "Marcus Aurelius"
       },
       {
