--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
       document.body.addEventListener('click', increment )
       document.body.addEventListener('touch', increment )
       document.body.addEventListener('keydown', function (e) {
-        if (e.which === 37) increment(-1)
-        else if (e.which === 13 || e.which === 32 || e.which === 39) increment(1)
+        if (e.keyCode === 37) increment(-1)
+        else if (e.keyCode === 13 || e.keyCode === 32 || e.keyCode === 39) increment(1)
       })
       document.querySelector('#fb-logo').addEventListener('click', share)
 
