--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="theme-color" content="#000000">
+  <meta property="og:image" content="./icons/facebook-preview.jpg">
+  <meta property="fb:app_id" content="210276656313368">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="Start your day with stoic quotes">
+  <meta property="og:title" content="Stoic Startup">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="./icons/browserconfig.xml">
   <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png">
@@ -16,7 +21,6 @@
   <link rel="shortcut icon" href="./icons/favicon.ico">
   <link rel="manifest" href="./icons/manifest.json">
   <script src="https://connect.facebook.net/en_US/sdk.js"></script>
-  <meta property="og:image" content="./icons/facebook-preview.jpg" />
 
   <title>Stoic Startup</title>
   <style>
