Add serviceWorker test for PWA

--- a/index.html
+++ b/index.html
@@ -897,6 +897,7 @@
       })
     }
 
+    /* Facebook integration */
     window.fbAsyncInit = function() {
       FB.init({
         appId   : 210276656313368,
@@ -913,8 +914,17 @@
      js = d.createElement(s); js.id = id;
      js.src = "https://connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
+   }(document, 'script', 'facebook-jssdk'))
 
+  if ('serviceWorker' in navigator) {
+    console.log("Registering service worker");
+    navigator.serviceWorker.register('service-worker.js')
+      .then(function (reg) {
+        console.log("Service worker registered")
+      }).catch(function (err) {
+        console.log("Service worker failed to register", err)
+      })
+  }
 
   </script>
 </body>
