--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Add a little Stoicism to your day with interesting quotes from Marcus Aurelius, Epictetus, and other Stoic philosophers. This lightweight site works best as your browser's default startup page, but can also be used whenever you need quick inspiration." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -21,6 +22,7 @@
   <link rel="mask-icon" href="./icons/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="shortcut icon" href="./icons/favicon.ico">
   <link rel="manifest" href="./icons/manifest.json">
+  <link rel="canonical" href="https://stoicstartup.app"/>
 
   <title>Stoic Startup</title>
   <style>
@@ -173,6 +175,7 @@
   <a id="gh-logo" class="logo" href="https://github.com/timmhayes/stoic-startup" title="GitHub Source">
     <img src="icons/GitHub-Mark-Light-32px.png" alt="GitHub Logo"/>
   </a>
+  <noscript>You must have JavaScript enabled to use this website.</noscript>
   <section class="flex">
     <div class="quote-box">
       <div class="quote"></div>
@@ -189,8 +192,8 @@
   <button class="nav-button back" aria-label="Previous Quote">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px"
       height="24px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" fill="white" xml:space="preserve">
-      <g id="Bounding_Boxes"><path opacity="0.87" fill="none" d="M0,0h24v24H0V0z"/></g>
-      <g id="Outline_1_"><path d="M17.51,3.87L15.73,2.1L5.84,12l9.9,9.9l1.77-1.77L9.38,12L17.51,3.87z"/></g>
+      <g><path opacity="0.87" fill="none" d="M0,0h24v24H0V0z"/></g>
+      <g><path d="M17.51,3.87L15.73,2.1L5.84,12l9.9,9.9l1.77-1.77L9.38,12L17.51,3.87z"/></g>
   </svg>
   </button>
 
@@ -199,14 +202,13 @@
   <button class="nav-button next" aria-label="Next Quote">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px"
         height="24px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" fill="white" xml:space="preserve">
-      <g id="Bounding_Boxes"><path opacity="0.87" fill="none" d="M24,24H0L0,0l24,0V24z"/></g>
-      <g id="Outline_1_"><path d="M6.49,20.13l1.77,1.77l9.9-9.9l-9.9-9.9L6.49,3.87L14.62,12L6.49,20.13z"/></g>
+      <g><path opacity="0.87" fill="none" d="M24,24H0L0,0l24,0V24z"/></g>
+      <g><path d="M6.49,20.13l1.77,1.77l9.9-9.9l-9.9-9.9L6.49,3.87L14.62,12L6.49,20.13z"/></g>
     </svg>
   </button>
   <script>
 
     function init() {
-
       var currentArrayPosition = -1
 
       function share(e) {
@@ -791,7 +793,7 @@
 
     quotes.forEach(function(element) {
       var short = element.quote.match(/^(\w+\W*,*){1,10}/)
-      element.hash = encodeURI(short[0].replace(/ $/gi, '').replace(/[ —]/gi, '_').replace(/[\:;,.\?\’]/gi, '').toLowerCase())
+      element.hash = encodeURI(short[0].replace(/ $/gi, '').replace(/[ —]/gi, '_').replace(/[\:;,.\?\’']/gi, '').toLowerCase())
     });
 
     // swipe events
@@ -807,14 +809,14 @@
       var gestureZone = document.body
 
       gestureZone.addEventListener('touchstart', function(event) {
-          touchstartX = event.changedTouches[0].screenX
-          touchstartY = event.changedTouches[0].screenY
+        touchstartX = event.changedTouches[0].screenX
+        touchstartY = event.changedTouches[0].screenY
       }, false)
 
       gestureZone.addEventListener('touchend', function(event) {
-          touchendX = event.changedTouches[0].screenX
-          touchendY = event.changedTouches[0].screenY
-          handleGesture(event)
+        touchendX = event.changedTouches[0].screenX
+        touchendY = event.changedTouches[0].screenY
+        handleGesture(event)
       }, false)
 
       function castEvent(direction) {
