Add hreflang to head

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link rel="shortcut icon" href="./icons/favicon.ico">
   <link rel="manifest" href="./icons/manifest.json">
   <link rel="canonical" href="https://stoicstartup.app"/>
+  <link rel="alternate" hreflang="en" href="https://stoicstartup.app" />
 
   <title>Stoic Startup</title>
   <style>
