Allow click handler for iOS

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   </style>
 </head>
 
-<body>
+<body tabindex="0">
   <a id="fb-logo" class="logo" href="#" title="Share on Facebook">
     <img src="icons/facebook.svg" alt="Facebook Logo"/>
   </a>
