--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     .quote-box {
       bottom: 0;
       color: #fff;
+      cursor: pointer;
       padding: 2rem 2rem 2rem 2.5rem;
       max-width: 600px;
       transition: opacity 0.5s, transform 0.5s;
@@ -306,7 +307,6 @@
         else if (e.direction === 'left') increment(-1)
       })
       document.body.addEventListener('click', increment )
-      document.body.addEventListener('touch', increment )
       document.body.addEventListener('keydown', function (e) {
         if (e.keyCode === 37) increment(-1)
         else if (e.keyCode === 13 || e.keyCode === 32 || e.keyCode === 39) increment(1)
