--- a/index.html
+++ b/index.html
@@ -469,6 +469,14 @@
         "quote": "When we are no longer able to change a situation, we are challenged to change ourselves.",
         "author": "Viktor Frankl"
       },
+      {
+        "quote": "He is a wise man who does not grieve for the things which he has not, but rejoices for those which he has.",
+        "author": "Epictetus"
+      },
+      {
+        "quote": "Pain is inevitable. Suffering is optional.",
+        "author":  "Buddhist adage"
+      },
 
 
 
